--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
   <meta charset="UTF-8">
@@ -18,7 +18,7 @@
       <p>当前已屏蔽</p>
       <div class="info-detail">
         <p><span id="normal-num">0</span>条主评论</p>
-        <p><span id="inner-num">0</span>条楼中楼</p>
+        <p><span id="inner-num">0</span>条子评论</p>
       </div>
     </div>
     <div class="setting" id="setting-page">
